DZ_7/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: app
spec:
  containers:
  - name: multitool
    image: wbitt/network-multitool
